--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UC5-Rb-B0C">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UC5-Rb-B0C">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,6 +22,13 @@
                                     <constraint firstAttribute="height" constant="340" id="Sso-ke-sNk"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S7T-69-kVd">
+                                <rect key="frame" x="0.0" y="334" width="414" height="528"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="528" id="0hj-Pg-5fy"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mSc-fx-MvN">
                                 <rect key="frame" x="180" y="374" width="86" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
@@ -35,12 +42,15 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="g8B-fS-UeL" firstAttribute="trailing" secondItem="S7T-69-kVd" secondAttribute="trailing" id="4hA-Q4-yFx"/>
                             <constraint firstItem="mSc-fx-MvN" firstAttribute="leading" secondItem="g8B-fS-UeL" secondAttribute="leading" constant="180" id="5Ke-w9-fds"/>
                             <constraint firstItem="7VI-v7-fds" firstAttribute="top" secondItem="49j-qN-NPr" secondAttribute="top" id="98S-Em-FcE"/>
+                            <constraint firstItem="S7T-69-kVd" firstAttribute="leading" secondItem="g8B-fS-UeL" secondAttribute="leading" id="LBY-Ru-19w"/>
                             <constraint firstItem="7VI-v7-fds" firstAttribute="trailing" secondItem="g8B-fS-UeL" secondAttribute="trailing" id="UYX-v3-50X"/>
                             <constraint firstItem="g8B-fS-UeL" firstAttribute="trailing" secondItem="mSc-fx-MvN" secondAttribute="trailing" constant="148" id="Utl-Ky-7iX"/>
                             <constraint firstItem="mSc-fx-MvN" firstAttribute="top" secondItem="7VI-v7-fds" secondAttribute="bottom" constant="34" id="W4s-IL-hja"/>
                             <constraint firstItem="7VI-v7-fds" firstAttribute="leading" secondItem="g8B-fS-UeL" secondAttribute="leading" id="fBZ-2W-IwZ"/>
+                            <constraint firstItem="g8B-fS-UeL" firstAttribute="bottom" secondItem="S7T-69-kVd" secondAttribute="bottom" id="xpM-rT-5d4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="g8B-fS-UeL"/>
                     </view>
